# joya

./: .gitattributes  Cargo.toml  README.md
crates/voice_activity_detector/: Cargo.toml
models/: silero_vad.onnx
scripts/: setup-virtual-mic.sh
src/: app.rs  audio.rs  config.rs  main.rs  pipeline.rs  playback.rs  screen_capture.rs  screen_overlay.rs  screen_translate.rs  stt.rs  translate.rs  tts.rs
